# magenta-realtime

./: .dockerignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/mrt-bench/: SKILL.md
.claude/skills/mrt-test/: SKILL.md
docker/: compose.magenta-render.yml  render-worker.Dockerfile
docs/: index.md  inference.md  installation.md  jax_live_producer.md  pc4ms-live-ag03-bridge.md
docs/research/: linux-realtime-runtime-options.md
docs/research/drumgrid2audio-2605.10281/: README.md
magenta_rt/: adg_dataset.py  aig_bridge.py  live_pipeline.py  live_ring.py  midi_drums.py  pc4ms_live.py  render_worker.py
magenta_rt/cli/: __init__.py  midi_commands.py  mlx_commands.py  pc4ms_commands.py
magenta_rt/jax/: live_producer.py
magenta_rt/mlx/: checkpoint_io.py  generate.py  load_weights.py  runtime.py  system.py
magenta_rt/mlx/spectrostream/: load_weights.py
scripts/: aig_adg_jax_render.py  aig_adg_mlx_render.py  bench_jax_live_producer.py
tests/: test_adg_dataset.py  test_aig_bridge.py  test_jax_live_producer.py  test_live_ring.py  test_midi_drums.py  test_mlx_cpu_config.py  test_pc4ms_live.py  test_render_worker.py
tools/mrt-alsa-host/: Cargo.toml
tools/mrt-alsa-host/src/: lib.rs  main.rs
