[project]
name = "magenta-rt"
description = "Real-time music generation models."
readme = "README.md"
keywords = ["music", "generation", "real-time", "audio", "mlx", "jax", "depthformer"]
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Google LLC"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]

# NOTE(vendoring): Once sequence-layers is on PyPI, add "sequence_layers" and
# remove "typeguard", "jaxtyping", and "recurrentgemma" (pulled in by sequence_layers).
dependencies = [
    "ai-edge-litert",
    "click",
    "numpy",
    "scipy",
    "einops",
    "safetensors",
    "typeguard==2.13.3",
    "jaxtyping",
    "recurrentgemma[jax]>=1.0.1",
    "google-cloud-storage",
    "huggingface_hub",
    "simple-term-menu",
    "librosa",
    "resampy",
    "sentencepiece",
    "soundfile",
]

[tool.uv.sources]
# NOTE(vendoring): submodule moved to magenta_rt/_vendor/sequence-layers.
# Uncomment for local editable development:
# sequence_layers = { path = "magenta_rt/_vendor/sequence-layers", editable = true }

[project.urls]
Repository = "https://github.com/magenta/magenta-realtime"
Issues = "https://github.com/magenta/magenta-realtime/issues"

# NOTE(vendoring): Once sequence-layers is on PyPI, add "sequence-layers[mlx]"
# to mlx (recurrentgemma can then move back to jax-only).
[project.optional-dependencies]
jax = ["jax", "flax", "optax", "jaxtyping", "typing_extensions"]
mlx = [
    "mlx; platform_system == 'Darwin'",
    "mlx[cpu]; platform_system == 'Linux'",
    "flax",
    "typing_extensions",
]
mlx-cuda12 = ["mlx[cuda12]", "flax", "typing_extensions"]
mlx-cuda13 = ["mlx[cuda13]", "flax", "typing_extensions"]
dev = ["jupyter", "ipython", "pytest", "matplotlib", "pytest-cov"]

# Listener-eval bulk generation
eval = [
    "pandas",
]

[project.scripts]
mrt = "magenta_rt.cli:main"

[build-system]
requires = ["flit_core >= 3.12.0, <4"]
build-backend = "flit_core.buildapi"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.flit.module]
name = "magenta_rt"

[tool.flit.sdist]
exclude = ["core/", "examples/", "tools/", "build/", "scripts/", "tests/", "notebooks/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pyink]
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true
